[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqlog"
version = "0.1.0"
description = "General purpose qlog, pcap, iperf parsers & visualizers"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Saeid Jahandar"},
]
# Runtime dependencies pull in all the libraries your scripts import
dependencies = [
  "numpy>=1.18",
  "pandas>=1.0",
  "matplotlib>=3.0",
  "seaborn>=0.10",
]

[project.urls]
"Repository" = "https://github.com/Saeid-jhn/pyqlog"

[tool.setuptools.packages.find]
# look for modules under src/
where = ["src"]
include = ["pcap", "iperflog", "qlog"]
